--- a/index.html
+++ b/index.html
@@ -3,8 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:url" content="https://bootcamp.perprogramera.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Bootcamp for full stack developer" />
+    <meta property="og:description" content="Online Bootcamp for developers ">
+    <meta property="image" content="https://bootcamp.perprogramera.com/banner.jpg"
+
     <title>Homework 1</title>
   </head>
-  <body></body>
+  <body>
+<h1>Bootcamp 6</h1>
+<img src="https://bootcamp.perprogramera.com/banner.jpg" alt="Course description" width="500" height="500">
+<p>A <b>full-stack engineer</b> can get a project done from start to finish. In this Career Path, you’ll begin with the front-end, move on to the back-end, then learn to connect the two. By the time you’re done, you’ll have the well-rounded skills needed to enter this in-demand job market </p>
+<p>Full stack developers have a number of options when it comes to their <i>career path</i>. However, one track is the most common. Click <strong>here</strong> to <em>learn</em> what it is!</p>
+<h2>User Story 1</h2>
+<blockquote cite="https://bootcamp.perprogramera.com/">"Bootcamp has served me a lot to advance, especially in the front-end part, but not neglecting the back-end as well. The lectures that were published on YouTube were very helpful in case we were not present or needed additional repetition. Personally, the bootcamp has helped me to be more skilled in the realization of projects that I have worked on for clients, and the knowledge I have gained has helped me a lot for employment"
+</blockquote>
+<p>-Engjellushe Rapuca</p>
+<h2> User Story 2   </h2>
+<blockquote cite="https://bootcamp.perprogramera.com/">    
+   " You were <q>the first impetus for me to start programming</q><del> (the training I had with you years ago in Kumanovo)</del>. Even during the Bootcamp I learned a lot of things, it was a different level from the first one. Working on real tasks and projects has given me the confidence to work harder and be confident.<ins> I am very grateful to you! </ins>"
+</blockquote>
+<p>-Egzon Sulejmani </p> 
+<h2>User Story 3 </h2>
+<blockquote><abbr title="Hypertext Markup Language">HTML </abbr> seemed to be so complicated to me! But through this course I managed to understand the logic of its elements and usage </blockquote>
+<p>-Unknown</p>
+
+
+<h4>Contact!</h4>
+<address>
+   <h5>Ylber Veliu</h5>
+   <p><a href="mailto:ylber.veliu@yahoo.com">ylber.veliu@yahoo.com</a></p>
+   <p>1000, Kosove</p>    
+</address>
+
+
+  </body>
 </html>
